assets/css/style.css
body {
    background: #FFF; /* white */
    color: #FFF;
    font-size: 14px;
    background: url('../../assets/img/bg.jpg') fixed;
    background-repeat: no-repeat;
    background-position: right -45px top 0px
}

h1 {
    font-size: 3em;
}

h2 {
    font-size: 1.5em;
}

label {
    font-weight: 100;
}

form {
    margin-bottom: 90px;
}

form input {
    margin-bottom: 15px;
}

section {
    padding: 40px 0;
}

a:visited, a:hover{
    color: #FFF;
    text-decoration: none;
}

.container {
    max-width: 1120px;
    margin: 0 auto;
}

.section-heading {
    font-size: 2.5em;
}



.navbar-default {
    padding: 10px;
    background-color: transparent;
    border-width:0;
}

.nav-pills>li>a, 
.nav-pills>li.active>a{
    color: #fff;
    background-color: rgba(0, 0, 0, .5);
}

.nav>li>a:focus, .nav>li>a:hover {
    color: #fff;
    background-color: rgba(0, 135, 224, 1);
}

.nav.nav-pills {
    /* why is this not working */
    display: inline-block;
}


/* profile */
#profile {
    height: calc(100vh);
    background: rgba(0, 135, 224, .8);
}

h1 .job-title {
    font-size: .6em;
    text-transform: uppercase;
}

.fa.fa-linkedin-square, .fa.fa-github-alt{
    font-size: 33.9px;
    margin: 0;
}

#profile .icon-freelancer,
.fa.fa-linkedin-square,
.fa.fa-github-alt {
    margin-left: 10px;
    margin-right: 10px;
}

#profile .icon-freelancer {
    margin-left: 10px;
    margin-right: 10px;
    border-radius: 20%;
    width: 30px;
    background: #fff;
    margin-top: -16px;
    line-height: 1;
    display: inline-block;
}



/* portfolio */
#portfolio>.container>h2, #contact>.container h2{
    margin: 0;
    padding: 0 0 20px;
}

#portfolio {
    background: rgba(39, 39, 39, 1);
}

.portfolio-item {
    padding: 15px;
    margin: 20px 5px;
    border: 2px solid white;
    border-radius: 8%;
}

#portfolio img{
    width: 100%;
    border-radius: 8%;
}

/* contact */
#contact {
    background: rgba(0, 135, 224, .8);
    text-align: center;
}

#contact ul {
    list-style: none;
    padding:0;
}

#contact ul li{
    margin-bottom: 10px;
}

#contact .row-1 {
    padding-top: 20px;
}
#contact .row-1 div {
    padding-bottom: 20px;
}

#contact .row-2 {
    padding-top: 20px;
    text-align: left;
}


footer {
    background: rgba(0, 135, 224, 1);
    line-height: 50px;
    height: 50px;
}

footer p {
    margin-bottom: 0;
}



.Aligner {
    display: flex;
    align-items: center;
    min-height: calc(100vh - 80px);
    justify-content: center;
}

.Aligner-item {
    flex: 1;
    text-align: center
}

.Aligner-item--top {
    align-self: flex-start;
    max-width: 0;
}

.Aligner-item--bottom {
    align-self: flex-end;
    max-width: 0;
}

.Aligner-item--fixed {
    flex: none;
    max-width: 50%;
}

#my-location {
    width: 100%;
}


@media screen and (max-width: 767px) {
    .wrapper-name, .wrapper-email {
        width: 50%;
    }
}

